# Parallel-programming

OMP/: CMakeLists.txt  Main.cpp  Task1.cpp  Task1.h  Task10.cpp  Task10.h  Task11.cpp  Task11.h  Task12.cpp  Task12.h  Task13.cpp  Task13.h  Task2.cpp  Task2.h  Task3.cpp  Task3.h  Task4.cpp  Task4.h  Task5.cpp  Task5.h  Task6.cpp  Task6.h  Task7.cpp  Task7.h  Task8.cpp  Task8.h  Task9.cpp  Task9.h
